--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.7'
-    id 'org.beryx.jlink' version '2.6.5'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.beryx.jlink' version '2.25.0'
 }
 
-mainClassName = "org.scenicview.scenicview/org.scenicview.ScenicView"
+
 group = 'org.scenic-view'
 version = '11.0.2'
 
 defaultTasks 'install'
 
-sourceCompatibility = '1.9'
-targetCompatibility = '1.9'
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+    options.encoding = "UTF-8"
+}
+
+application {
+    mainClass = "org.scenicview.ScenicView"
+    mainModule = "org.scenicview.scenicview"
+}
 
 repositories {
     mavenCentral()
@@ -41,7 +49,7 @@ jar {
                 'Automatic-Module-Name': 'org.scenicview.scenicview'
         )
     }
-    archiveName = 'scenicview.jar'
+    archiveFileName = 'scenicview.jar'
 }
 
 run {
@@ -59,8 +67,8 @@ jlink {
     launcher {
         name = 'scenicView'
     }
-    imageDir = file("${buildDir}/scenicview")
-    imageZip = file("${buildDir}/dist/scenicview-${platform}.zip")
+    imageDir = file("${buildDir}/scenicview") as Directory
+    imageZip = file("${buildDir}/dist/scenicview-${platform}.zip") as RegularFile
 }
 
 tasks.jlink.doLast {
